# playos-coreui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: coreui-utils.cmake  iniparser.cmake  rapidjson.cmake  utils.cmake  wlroots.cmake
coreui/: CMakeLists.txt  coreui_input.c  coreui_output.c  coreui_output_manager.c  coreui_server.c  coreui_views.c  coreui_workspace.c  input.c  main.c  output.c  server.c  views.c
coreui/include/: coreui_input.h  coreui_output.h  coreui_output_manager.h  coreui_server.h  coreui_utils.h  coreui_view.h  coreui_workspace.h  server.h
coreui/include/input/: coreui_keyboard.h  coreui_pointer.h
coreui/include/shell/: coreui_fullscreen_shell.h  coreui_layer_shell.h  coreui_xdg_shell.h  layer-shell.h
coreui/input/: coreui_keyboard.c  coreui_pointer.c
coreui/shell/: coreui_fullscreen_shell.c  coreui_layer_shell.c  coreui_xdg_shell.c  layer-shell.c
flutter_embedder/: CMakeLists.txt  application.cpp  coreui_compositor.cpp  coreui_embedder.cpp  embedder.cpp
flutter_embedder/flutter/: README.md
flutter_embedder/include/coreui/flutter/: application.h  embedder.h
flutter_embedder/plugins/: coreui_key_event.h  coreui_text_input.cpp  coreui_text_input.h
libcoreui_flutter/: application.cpp  coreui_compositor.cpp  coreui_compositor.h  coreui_embedder.cpp  coreui_embedder.h  coreui_keymap.cpp  coreui_keymap.h
libcoreui_flutter/internal/: coreui_channel.cpp  coreui_channel.h  coreui_messenger.cpp  coreui_messenger.h  coreui_plugin_registrar.cpp  coreui_plugin_registrar.h  json_message_codec.cpp  json_message_codec.h  json_method_codec.cpp  json_method_codec.h
libcoreui_flutter/plugins/: coreui_key_event.cpp  coreui_key_event.h  coreui_text_input.cpp  coreui_text_input.h
libcoreui_wl/: CMakeLists.txt  application.cpp  event_loop.cpp  window.cpp
libcoreui_wl/include/coreui/: application.h  event_loop.h  log.h  window.h  window_event.h
libcoreui_wl/include/coreui/wayland/: layer_shell_surface.h  surface.h  xdg_shell_surface.h
libcoreui_wl/wayland/: egl_wayland.c  egl_wayland.h  input.c  input.h  layer_shell_config.h  layer_shell_surface.c  layer_shell_surface.cpp  ouput.h  output.c  registry.c  registry.h  surface.cpp  wl_context.c  wl_context.cpp  wl_context.h  wl_context.hxx  xdg_shell_surface.cpp
libcoreui_wl/wayland/private/: egl_wayland.h  input.h  layer_shell_config.h  ouput.h
modules/: CMakeLists.txt
modules/panel/: CMakeLists.txt  application.cpp  application.h  layer-shell.c  main.cpp  meta.xml
modules/panel/gui/: pubspec.yaml
modules/panel/gui/lib/: main.dart
modules/settings/: CMakeLists.txt  main.cpp  meta.xml
modules/settings/gui/: pubspec.yaml
modules/settings/gui/lib/: main.dart
modules/wallpaper/: CMakeLists.txt  application.cpp  application.h  main.cpp  meta.xml  wallpaper.cpp  wallpaper.h
modules/wallpaper/libwallpaper/: CMakeLists.txt  egl_common.c  egl_common.h  gles.cpp  gles.h  libwallpaper.h  output.c  output.h  private.h  wallpaper.c
src/: CMakeLists.txt
toolchain_files/: meson_aarch64.txt.template  toolchain_aarch64.cmake.template
